# SpectraCode

./: .gitignore  Dockerfile  README.md  agent.py  api.py  docker-compose.yaml  evaluate.py  gradio_app.py  main.py  pyproject.toml  requirements.txt
detectors/: classifier.py  ensemble.py  perplexityScore.py  stylometryModel.py
rag/: build_rag.py  query_rag.py
utils/: astUtils.py  patcher.py  zip_parser.py
